--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -214,18 +214,12 @@ h6:hover .anchor-link {
 
 // Handle Overflow With Table Output
 table {
-  display: block !important;
-  overflow-x: auto;
-  white-space: nowrap;
+  white-space: normal;
+  max-width: 100%;
   font-size: 75%;
   border: none;
   th {
     text-align: center !important;
-  }
-  td {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    max-width: 15em;
   }
 }
 
