modified css styles

--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -25,7 +25,7 @@
 // make non-headings slightly lighter
 .post-content p,
 .post-content li {
-  // font-size: 16px;
+  font-size: 16px;
   color: #515151;
 }
 
