--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -65,6 +65,7 @@ h4 {
 
 pre {
   margin-bottom: 1.5rem !important;
+  font-size: 14px;
 }
 
 // make sure the post title doesn't have too much spacing
@@ -156,7 +157,7 @@ h6:hover .anchor-link {
   margin-top: 0.5rem !important;
   margin-bottom: 0.5rem !important;
   color: #585858;
-  font-size: 115%;
+  font-size: 100%;
 }
 
 // Custom styling for category tags
@@ -212,12 +213,12 @@ h6:hover .anchor-link {
   font-weight: bold;
 }
 
-// Handle Overflow With Table Output
 table {
   white-space: normal;
   max-width: 100%;
-  font-size: 75%;
+  font-size: 100%;
   border: none;
+  overflow: auto;
   th {
     text-align: center !important;
   }
