--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,9 +180,9 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 .highlighter-rouge .highlight { background: #eeeeff; }
 
 /** Wrapper */
-.wrapper { max-width: calc(800px - (30px)); margin-right: auto; margin-left: auto; padding-right: 15px; padding-left: 15px; }
+.wrapper { max-width: calc(1000px - (30px)); margin-right: auto; margin-left: auto; padding-right: 15px; padding-left: 15px; }
 
-@media screen and (min-width: 1200px) { .wrapper { max-width: calc(800px - (30px * 2)); padding-right: 30px; padding-left: 30px; } }
+@media screen and (min-width: 1200px) { .wrapper { max-width: calc(1000px - (30px * 2)); padding-right: 30px; padding-left: 30px; } }
 
 /** Clearfix */
 .wrapper:after { content: ""; display: table; clear: both; }
@@ -345,7 +345,7 @@ h1, h2, h3, h4 { font-weight: normal !important; margin-bottom: 0.5rem !importan
 
 h1 code, h2 code, h3 code, h4 code { font-size: 100%; }
 
-pre { margin-bottom: 1.5rem !important; }
+pre { margin-bottom: 1.5rem !important; font-size: 14px; }
 
 .post-title { margin-top: 0.5rem !important; }
 
@@ -373,7 +373,7 @@ h1:hover .anchor-link, h2:hover .anchor-link, h3:hover .anchor-link, h4:hover .a
 
 .post-meta-title, .post-meta { margin-top: 0.25em !important; margin-bottom: 0.25em !important; font-size: 105%; }
 
-.page-description { margin-top: 0.5rem !important; margin-bottom: 0.5rem !important; color: #585858; font-size: 115%; }
+.page-description { margin-top: 0.5rem !important; margin-bottom: 0.5rem !important; color: #585858; font-size: 100%; }
 
 .category-tags-icon { font-size: 75% !important; padding-left: 0.375em; opacity: 35%; }
 
@@ -399,7 +399,7 @@ h1:hover .anchor-link, h2:hover .anchor-link, h3:hover .anchor-link, h4:hover .a
 
 .search-result-highlight { color: #2e0137; font-weight: bold; }
 
-table { white-space: normal; max-width: 100%; font-size: 75%; border: none; }
+table { white-space: normal; max-width: 100%; font-size: 100%; border: none; overflow: auto; }
 
 table th { text-align: center !important; }
 
