--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -9,3 +9,52 @@
 
 // If you want to turn off dark background for syntax highlighting, comment or delete the below line.
 // @import "minima/fastpages-dracula-highlight"; 
+
+// make body text (paragraphy) smaller (was 20px)
+.post-content p, .post-content li {
+   font-size: 16px;
+}
+
+// change Post-Title (post-header) size
+// Defaults from minima/_sass/minima/_layout.scss were relative-font-size(2.625) and relative-font-size(2.625)
+.post-header h1 {
+  @include relative-font-size(2.0);  // 2.0
+
+  @media screen and (min-width: $on-large) {
+    @include relative-font-size(2.25);  // 2.25
+  }
+}
+
+.post-header p {
+  font-style: italic
+}
+
+// make heading sizes smaller in body
+.post-content {
+  h1 {
+    @include relative-font-size(1.75);
+
+    @media screen and (min-width: $on-large) {
+      @include relative-font-size(2);
+    }
+  }
+  h2 {
+    @include relative-font-size(1.375);
+
+    @media screen and (min-width: $on-large) {
+      @include relative-font-size(1.625);
+    }
+  }
+  h3 {
+    @include relative-font-size(1.25);
+  }
+  h4 {
+    @include relative-font-size(1.125);
+  }
+  h5 {
+    @include relative-font-size(1.0625);
+  }
+  h6 {
+    @include relative-font-size(1.0625);
+  }
+}
