deploy: 42dd3ffec27baa4334490bd4efa4fc13d7919cd4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://rsms.me/inter/inter.css");
 .highlight .c { color: #998; font-style: italic; }
 
 .highlight .err { color: #a61717; background-color: #e3d2d2; }
@@ -425,13 +426,25 @@ pre code { font-size: 15px !important; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
+html { font-family: "Inter", sans-serif !important; }
+
+@supports (font-variation-settings: normal) { html { font-family: "Inter var", sans-serif !important; } }
+
+body { font-family: "Inter", "Helvetica Neue", "Helvetica", "Tahoma", "Arial", sans-serif !important; }
+
+.page-content { font-family: "Inter", "Helvetica Neue", "Helvetica", "Tahoma", "Arial", sans-serif !important; }
+
+.profile-img { width: 250px; height: 250px; border-radius: 50%; box-shadow: 0 8px 12px rgba(0, 0, 0, 0.175); }
+
+@media only screen and (max-width: 800px) { .profile-img { /* for mobile phone and tablet devices */ width: 150px; height: 150px; } }
+
 .post-content p, .post-content li { font-size: 16px; }
+
+.highlight pre { font-size: 14px; }
 
 .post-header h1 { font-size: 2rem; }
 
 @media screen and (min-width: 1200px) { .post-header h1 { font-size: 2.25rem; } }
-
-.post-header p { font-style: italic; }
 
 .post-content h1 { font-size: 1.75rem; }
 
