--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -9,22 +9,22 @@
 // @import "minima/fastpages-dracula-highlight";
 
 // change the default font
-@import url('https://rsms.me/inter/inter.css');
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 html {
-  font-family: 'Inter', sans-serif !important;
+  font-family: 'Karla', sans-serif !important;
 }
 @supports (font-variation-settings: normal) {
   html {
-    font-family: 'Inter var', sans-serif !important;
+    font-family: 'Karla', sans-serif !important;
   }
 }
 
 body {
-  font-family: 'Inter', 'Helvetica Neue', 'Helvetica', 'Tahoma', 'Arial', sans-serif !important;
+  font-family: 'Karla', 'Helvetica Neue', 'Helvetica', 'Tahoma', 'Arial', sans-serif !important;
 }
 
 .page-content {
-  font-family: 'Inter', 'Helvetica Neue', 'Helvetica', 'Tahoma', 'Arial', sans-serif !important;
+  font-family: 'Karla', 'Helvetica Neue', 'Helvetica', 'Tahoma', 'Arial', sans-serif !important;
 }
 
 // profile image
