--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://rsms.me/inter/inter.css");
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 .highlight .c { color: #998; font-style: italic; }
 
 .highlight .err { color: #a61717; background-color: #e3d2d2; }
@@ -426,13 +426,13 @@ pre code { font-size: 15px !important; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
-html { font-family: 'Inter', sans-serif !important; }
+html { font-family: 'Karla', sans-serif !important; }
 
-@supports (font-variation-settings: normal) { html { font-family: 'Inter var', sans-serif !important; } }
+@supports (font-variation-settings: normal) { html { font-family: 'Karla', sans-serif !important; } }
 
-body { font-family: 'Inter', 'Helvetica Neue', 'Helvetica', 'Tahoma', 'Arial', sans-serif !important; }
+body { font-family: 'Karla', 'Helvetica Neue', 'Helvetica', 'Tahoma', 'Arial', sans-serif !important; }
 
-.page-content { font-family: 'Inter', 'Helvetica Neue', 'Helvetica', 'Tahoma', 'Arial', sans-serif !important; }
+.page-content { font-family: 'Karla', 'Helvetica Neue', 'Helvetica', 'Tahoma', 'Arial', sans-serif !important; }
 
 .profile-img { width: 150px !important; height: 150px !important; border-radius: 50%; box-shadow: 0 8px 12px rgba(0, 0, 0, 0.175); }
 
