--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -39,6 +39,7 @@ body {
 .post-content p,
 .post-content li {
   font-size: 16px;
+  text-align: justify;
 }
 
 // make code highlighted text larger
